generic service implementation