@@ -1,10 +1,10 @@
 package io.split.tutorial.controller;
 
-import io.split.client.SplitClient;
 import io.split.tutorial.model.User;
+import io.split.tutorial.model.Feature;
+import io.split.tutorial.service.FeatureService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -20,14 +19,23 @@ import java.util.stream.Collectors;
 public class FeaturesController {
 
     @Autowired
-    private SplitClient splitClient;
+    private FeatureService featureService;
 
+    private List<User> users = List.of(
+            new User("Francisco", "test"),
+            new User("Jorge", "test"),
+            new User("Juan", "test"),
+            new User("Maria", "user"),
+            new User("Marta", "user"),
+            new User("Noelia", "user"),
+            new User("Alberto", "user"),
+            new User("Lucas", "user"),
+            new User("Sandra", "user"),
+            new User("Mario", "user"));
+    private Map<String, String> hardcodedFeatures = Map.of("feature-1", "1", "feature-2", "2");
 
-    @Value("${split.example}")
-    private String example;
-
-    private List<String> users = List.of("test1", "test2", "test3", "user1", "user2", "user3", "user4", "user5", "user6", "user7");
-    private Map<String, String> features = Map.of("feature-flag", "X", "feature-2", "2");
+    @Autowired
+    private List<Feature> features;
 
 
     @GetMapping(path = "/features")
@@ -43,37 +51,16 @@ public class FeaturesController {
 
     public List<User> evaluate() {
 
-        return users.stream().map(user -> getStrings(user)).collect(Collectors.toList());
+        return users.stream().map(user -> obtainFeatures(user)).collect(Collectors.toList());
     }
 
-    public User getStrings(String user) {
+    public User obtainFeatures(User user) {
 
-        try {
-            List<String> activeFeatures = features.entrySet().stream()
-                    .map(feature -> evaluateTreatment(user, feature.getKey(), feature.getValue()))
-                    .flatMap(Optional::stream)
-                    .collect(Collectors.toList());
+        List<String> featureNames = featureService.filterByUser(user.getName()).stream().map(Feature::getName).toList();
+        user.setFeatures(featureNames);
 
-            return new User(user, activeFeatures);
-
-        } catch (Exception e) {
-            log.error(e.getMessage());
-            return new User(user, new ArrayList<>());
-        }
+        return user;
     }
 
-    private Optional<String> evaluateTreatment(String user, String featureName, String featureValue) {
-
-        String treatment = obtainTreatment(user, featureName);
-        if (treatment.equals("on")) {
-            return Optional.of(featureValue);
-        } else {
-            return Optional.empty();
-        }
-    }
-
-    private String obtainTreatment(String user, String featureName) {
-        return splitClient.getTreatment(user, featureName);
-    }
 
 }
